cmake_minimum_required(VERSION 3.29)
project(DATA_Structure_Training)

set(CMAKE_CXX_STANDARD 14)

add_executable(DATA_Structure_Training
        lab1/1-2.cpp
        lab2/2-1.cpp
        lab2/2-2.cpp
        lab5/5-2.cpp
        lab6/6-1.cpp
        lab7/7-1.cpp
        lab7/7-2.cpp
        lab10/10-2.cpp
        lab10/10-3.cpp
        lab10/10-1.cpp
        lab11/1.cpp
        lab11/2.cpp
        lab12/1.cpp
        lab12/2.cpp)
